namespace Sqeez.Api.Enums
{
    public enum UserRole { Student, Teacher, Admin }

    public enum AttemptStatus { Created, Started, Completed, Abandoned }

    public enum MediaType { Image, Video, Audio, Document }
}