namespace Sqeez.Api.Models.Users
{
    public class Admin : Teacher
    {
        public string PhoneNumber { get; set; } = string.Empty;
    }
}